# lilypad

./: .air.toml  .cla-bot  .clabot  .env.local  .gitignore  .local.dev  .local.dev.bak  .release-please-manifest.json  .swp  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVNET.md  LICENSE  LOCAL_DEVELOPMENT.md  Makefile  NOTICES.md  README-job-cn.md  README-job-en.md  README-node-cn.md  README-node-en.md  README.md  SECURITY.md  TESTNETDEPLOY.md  config.yaml  docker-compose.yml  generate.go  go.mod  go.sum  go.sumd  justfile  main.go  package-lock.json  package.json  release-please-config.json  stack  testfile.txt
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
dashboard/: components.json  jsconfig.json  package-lock.json  package.json
docker/: docker-compose.base.yml  docker-compose.dev.yml  docker-compose.orbit.yml  docker-compose.yml  dockerfile  tempo.yaml
docs/: example-running-onchain-client.md  ipc.md  smart-contract-jobs.md  upgrade-production.md
hardhat/: .dockerignore  .env.sample  DEPLOYMENT.MD  Dockerfile  README.md  docker-compose.yml  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
module_templates/: cowsay.json
pkg/gpu-tools/: Cargo.toml  README.md  build.rs
pkg/gpu-tools/proto/: gpu_tools.proto
pkg/gpu-tools/src/: cupti.rs  kafka.rs  lib.rs  logger.rs  main.rs  monitor.rs  nvml.rs  server.rs  service.rs
pkg/gpu-tools/tests/: grpc_test.rs  integration_test.rs  sample.env.sample
pkg/gpu-tools/tests/models/: mod.rs  model.rs  phi3.rs
(+492 files in other folders)
