[package]
name = "gpu-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1"
flume = "0.11.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
# cupti-sys = { version = "0.1.0", git = "https://github.com/sustia-llc/cupti-sys", branch = "cuda-126" }
anyhow = "1.0"
chrono = "0.4"
nvml-wrapper = { version = "0.10.0", features = ["serde"] }
rdkafka = { version = "0.37.0", features = ["sasl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
libc = "0.2"
tonic = "0.12.3"
prost = "0.13.4"
tracing-appender = "0.2"
nanoid = "0.4"

[dev-dependencies]
candle-core = { version = "0.8.2", features = ["cuda"] }
candle-transformers = { version = "0.8.2", features = ["cuda"] }
candle-examples = { version = "0.8.1" }
tokenizers = "0.19.1" # candle requires this version for now
clap = { version = "4.5", features = ["derive"] }
tracing-chrome = "0.7"
hf-hub = "0.4.1"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.12.3"